backend/custom_admin/src/custom-styles.css
@import "@radix-ui/themes/styles.css";

/* Fix radix dialog flickering when closing */
.rt-BaseDialogOverlay {
  &:where([data-state="closed"]) {
    animation: rt-dialog-overlay-no-op 200ms cubic-bezier(0.16, 1, 0.3, 1);
  }
  &:where([data-state="open"])::before {
    animation: rt-fade-in 200ms cubic-bezier(0.16, 1, 0.3, 1);
  }
  &:where([data-state="closed"])::before {
    opacity: 0;
    animation: rt-fade-out 200ms cubic-bezier(0.16, 1, 0.3, 1);
  }
  z-index: 30;
}

.rt-BaseDialogContent {
  &:where([data-state="open"]) {
    animation: rt-dialog-content-show 200ms cubic-bezier(0.16, 1, 0.3, 1);
  }
  &:where([data-state="closed"]) {
    opacity: 0;
    animation: rt-dialog-content-hide 100ms cubic-bezier(0.16, 1, 0.3, 1);
  }
}

.radix-themes.is-widget-theme {
  min-height: auto;
  width: 100%;
  height: 100%;
}

.rich-editor,
form .aligned .rich-editor {
  ul,
  ol {
    padding-left: 40px;
    margin-left: 0;

    li {
      font-size: var(--font-size-3);
    }
  }

  ul li {
    list-style: disc;
  }

  ol li {
    list-style: decimal;
  }

  * {
    font-size: var(--font-size-3);
  }

  p {
    margin: 0;
    padding: 0;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    background: none;
    color: black;
    padding: 0;
    margin: 0;
    text-transform: none;
    text-decoration: none;
    line-height: var(--line-height-3);
    letter-spacing: normal;
    font-weight: bold;
  }

  h1 {
    font-size: var(--font-size-8);
  }
  h2 {
    font-size: var(--font-size-6);
  }
  h3 {
    font-size: var(--font-size-4);
  }
  h4 {
    font-size: var(--font-size-3);
  }
  h5 {
    font-size: var(--font-size-2);
  }
  h6 {
    font-size: var(--font-size-1);
  }
}

.rich-editor-button {
  display: inline-block;
  color: #fff;
  background-color: #00adf2;
  padding: 16px 24px;
  text-align: center;
  font-size: 16px;
  font-weight: 600;
  text-decoration-line: none;
}

.rich-editor-button:hover {
  color: #fff;
}

.rich-editor {
  table td {
    @apply p-2 border border-slate-400;
  }
}

